--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <h1 class="text-center mt-3 mb-3">EXRAL PRODUCTION Youtube Comments</h1>
 
             <div class="col-xs-12" id="comment-list">
                 
             </div>
-            </div>
         </div>
+
 
         <div id="comment-template" class="d-none">
             <div class="card mb-3">
