--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div id="comment-template" class="d-none">
             <div class="card mb-3">
                 <div class="row no-gutters">
-                    <div class="col-sm-4 ">
+                    <div class="col-5">
                         <a href="#" class="comment-link" target="_blank">
                             <img src="https://img.youtube.com/vi/uKCKwN1m-so/0.jpg" alt="" class="card-img">
                         </a>
                     </div>
-                    <div class="col-sm-8">
+                    <div class="col-7">
                         <div class="card-body">
                             <!-- <button class="btn-xs btn-primary float-sm-right">Approve</button> -->
                             <h4 class="video-title">Video Title</h4>
